Fix gap in hmac controls

--- a/index.scss
+++ b/index.scss
@@ -189,6 +189,7 @@ footer {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  gap: 8px;
   margin: 8px 0;
 
   .left {
